services/argocd/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard
  namespace: argocd
  
spec:
  entryPoints:
    - websecure
    - web

  routes:
    - match: Host(`argocd.nebulanet.xyz`)
      kind: Rule
      priority: 10
      services:
        - name: argo-cd-argocd-server
          kind: Service
          port: http
    - match: Host(`argocd.nebulanet.xyz`) && Header(`Content-Type`, `application/grpc`)
      kind: Rule
      priority: 11
      services:
        - name: argo-cd-argocd-server
          kind: Service
          port: http
          scheme: h2c
  tls:
    secretName: argocd-dashboard-tls
